--- a/public/style/custom.css
+++ b/public/style/custom.css
@@ -29,7 +29,8 @@
     scroll-behavior: smooth;
     font-family: "Raleway" sans-serif;
   }
-} */
+}
+*/
 html {
   scroll-behavior: smooth;
 }
@@ -66,4 +67,27 @@ html {
   /* border: 2px solid rgba(255, 255, 255, 0.1); */
   box-shadow: 0 0 80px rgba(0, 0, 0, 0.25);
   /* padding: 30px 30px 30px 30px; */
+}
+
+
+/* fonts.css */
+@font-face {
+  font-family: 'SF Pro Text';
+  src: url('/fonts/SF-Pro-Text-Medium.woff') format('woff');
+  font-weight: 500; /* Medium */
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('/fonts/SF-Pro-Display-Bold.woff') format('woff');
+  font-weight: 700; /* Bold */
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Acumin Variable Concept';
+  src: url('/fonts/Acumin-Variable-Concept.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
 }
