--- a/src/components/sections/hero/Hero.astro
+++ b/src/components/sections/hero/Hero.astro
@@ -1,6 +1,6 @@
 ---
 import { Image, Picture } from "astro:assets";
-import heroImg from "./assets/wind3.jpg";
+import heroImg from "../../sections/hero/assets/geolocation.jpg";
 import CtaButton from "../../shared/CtaButton.astro";
 import GradiantText from "../../shared/GradiantText.astro";
 import SubTitle from "../../shared/SubTitle.astro";
@@ -8,14 +8,14 @@ import Title from "../../shared/Title.astro";
 import LazyImage from "../../shared/LazyImage.astro";
 
 const heroSection = {
-  headline1: "Powering",
-  headline2: "Tomorrow,",
-  headline3: "Sustainably",
-  headline4: "Today!",
-  subheading1: "Join us in the green energy revolution",
-  subheading2: "and be part of a sustainable future",
-  subheading3: "for generations to come.",
-  buttonText: "Get Powered Today!",
+  headline1: "Precisión en",
+  headline2: "Geolocalización",
+  headline3: "Indoor con",
+  headline4: "SISTEQ Control",
+  subheading1: "Tecnología avanzada para seguridad, logística y manufactura.",
+  subheading2: "Optimización y monitoreo en tiempo real.",
+  subheading3: "Soluciones adaptadas a tu industria.",
+  buttonText: "Contáctanos",
   backgroundImage: "hero-background-image.jpg",
 };
 
@@ -26,7 +26,7 @@ export interface Props {
 const { className = "" } = Astro.props;
 ---
 
-<section class=`relative  ${className} w-full h-[80vh]` id="hero">
+<section class={`relative ${className} w-full h-[80vh]`} id="hero">
   <div class="w-full h-[80vh] pt-[100px]">
     <div
       class="w-full h-full grid grid-cols-1 md:grid-cols-2 justify-end bg-base-100 dark:bg-base-dark-900"
@@ -34,26 +34,30 @@ const { className = "" } = Astro.props;
       <div class="justify-center flex flex-col text-center md:ml-auto">
         <Title className="">
           {heroSection.headline1}
-          <GradiantText
-            >{" " + heroSection.headline2}
+          <GradiantText>
+            {" " + heroSection.headline2}
             <br />
             {" " + heroSection.headline3}
-          </GradiantText>{heroSection.headline4}
+          </GradiantText>
+          {heroSection.headline4}
         </Title>
-        <SubTitle className=" mt-10 leading-9 italic">
+        <SubTitle className="mt-10 leading-9 italic">
           {heroSection.subheading1}
           <br />
-          {heroSection.subheading2}<br />
+          {heroSection.subheading2}
+          <br />
           {heroSection.subheading3}
         </SubTitle>
         <div class="pt-10">
+          <a href="https://wa.me/+522223733576">
           <CtaButton>{heroSection.buttonText}</CtaButton>
+        </a>
         </div>
       </div>
       <div class="flex relative pt-10 md:p-0">
         <LazyImage
           src={heroImg}
-          alt="A picture of a wind turbine."
+          alt="Imagen representativa de geolocalización indoor."
           className="w-full h-full object-cover"
         />
         <svg
