--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,9 @@ import LatestInnovations from "../components/sections/innovations/LatestInnovati
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to the Agency template ">
+<Layout title="Servicios de Geolocalización SISTEQ">
   <main class="flex flex-col gap-y-20 md:gap-y-40 overflow-hidden">
+    
     <!-- Hero Section: -->
     <!-- High-quality image or animation of renewable energy sources. -->
     <!-- Headline and subheading centered on the page. -->
@@ -27,18 +28,6 @@ import Layout from "../layouts/Layout.astro";
     <!-- Highlight any recent advancements or innovations in your green energy solutions. -->
     <!-- Use images and concise descriptions to showcase your commitment to cutting-edge technology. -->
     <!-- Emphasize how staying with your company means staying at the forefront of green energy. -->
-
-    <CustomerTestimonials />
-    <!-- Customer Testimonials: -->
-    <!-- Share testimonials from satisfied customers. -->
-    <!-- Include photos, names, and brief quotes to build trust. -->
-    <!-- Place a call-to-action to encourage users to explore more customer stories. -->
-    <EnvironmentalImpact />
-    <!-- Environmental Impact: -->
-    <!-- Showcase the positive impact users can make by choosing your services. -->
-    <!-- Use statistics, infographics, or visuals to illustrate the environmental benefits. -->
-    <!-- Emphasize the role your company plays in promoting sustainability. -->
-
     <FeaturedProjects />
     <!-- Featured Projects or Case Studies: -->
     <!-- Showcase successful green energy projects your company has undertaken. -->
