hide hero img on mobile

--- a/src/components/sections/hero/Hero.astro
+++ b/src/components/sections/hero/Hero.astro
@@ -58,7 +58,7 @@ const { className = "" } = Astro.props;
         <LazyImage
           src={heroImg}
           alt="Imagen representativa de geolocalización indoor."
-          className="w-full h-full object-cover"
+          className="hidden md:block w-full h-full object-cover"
         />
         <svg
           class="fill-base-100 dark:fill-base-dark-900 z-10 absolute top-0 start-0 h-full hidden md:block"
