--- a/src/components/sections/hero/Hero.astro
+++ b/src/components/sections/hero/Hero.astro
@@ -31,7 +31,7 @@ const { className = "" } = Astro.props;
     <div
       class="w-full h-full grid grid-cols-1 md:grid-cols-2 justify-end bg-base-100 dark:bg-base-dark-900"
     >
-      <div class="justify-center flex flex-col text-center md:ml-auto">
+      <div class="justify-center flex flex-col text-center md:ml-auto px-4 sm:px-6 lg:px-8">
         <Title className="">
           {heroSection.headline1}
           <GradiantText>
