--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -17,10 +17,10 @@ import Paragraph from "../components/shared/Paragraph.astro";
             Contacto: contacto@sisteqcontrol.com
           </Paragraph>
           <Paragraph>
-            Teléfono: +52 55 1234 5678
+            Teléfono: +52 222 373 3576
           </Paragraph>
           <Paragraph>
-            Dirección: Calle Ficticia #123, Ciudad, País
+            Ubicación: Puebla, México.
           </Paragraph>
         </div>
       </div>
